[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/RailTower.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_BASE.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_1CHARGE_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_1CHARGE_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_2CHARGE1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_1CHARGE_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_3CHARGE3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_4CHARGE1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_4CHARGE2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_2CHARGE2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_2CHARGE3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_3CHARGE1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_3CHARGE2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_4CHARGE3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_FIRE1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_0CHARGE.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_FIRE2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_FIRE3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/Towers/TOWER_RAIL_SENTRY_FIRE4.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "Fire",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 14 ) ],
"loop": false,
"name": "Charging",
"speed": 3.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 14 ) ],
"loop": true,
"name": "Standby",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 128.239

[node name="Tower" type="Area2D"]
monitorable = false
collision_mask = 12
script = ExtResource( 1 )

[node name="TowerCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TowerBase" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 2 )
animation = "New Anim"

[node name="TowerTurret" type="AnimatedSprite" parent="."]
position = Vector2( -0.187286, -0.70829 )
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 3 )
animation = "Standby"
frame = 2

[node name="ProjectileSpawnLocation" type="Node2D" parent="TowerTurret"]
position = Vector2( -0.087914, -8.47339 )

[node name="Fire" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="TowerRange" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerRange"]
position = Vector2( -0.149154, -0.722725 )
scale = Vector2( 2, 2 )
shape = SubResource( 4 )

[connection signal="animation_finished" from="TowerTurret" to="." method="_on_Tower_Turret_animation_finished"]
[connection signal="timeout" from="Fire" to="." method="_on_Fire_timeout"]
[connection signal="area_entered" from="TowerRange" to="." method="_on_Tower_Range_area_entered"]
[connection signal="area_exited" from="TowerRange" to="." method="_on_Tower_Range_area_exited"]
